test/negative/feature_nestedtypes.java

public class feature_nestedtypes {
  public feature_nestedtypes() {}
  public class B {
    public B() {}
  }
}

